force-app/main/default/objects/SBQQ__Quote__c/fields/Schedule_or_On_Call__c.field-meta.xml
<CustomField>
    <fullName>Schedule_or_On_Call__c</fullName>
    <label>Schedule or On Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Call</fullName>
            </value>
            <value>
                <fullName>Scheduled On Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>