force-app/main/default/objects/SBQQ__Quote__c/fields/SFDC_Team__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Team__c</fullName>
    <label>SFDC Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>New, Add and Change Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>