force-app/main/default/objects/SBQQ__Quote__c/fields/SFDC_Team_User__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Team_User__c</fullName>
    <label>SFDC Team User</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SFDC_Team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Spec Correction Team</fullName>
                <isActive>false</isActive>
                <label>Internal Spec Correction Team</label>
            </value>
            <value>
                <fullName>New Stores Team</fullName>
            </value>
            <value>
                <fullName>Sales Amazon Team</fullName>
            </value>
            <value>
                <fullName>Sales Dollar Tree/Family Dollar Team</fullName>
            </value>
            <value>
                <fullName>Sales Greystar Team</fullName>
            </value>
            <value>
                <fullName>Sales Home Depot Projects</fullName>
            </value>
            <value>
                <fullName>Sales Home Depot Team</fullName>
            </value>
            <value>
                <fullName>Sales M&amp;I Team</fullName>
            </value>
            <value>
                <fullName>Service Fulfillment - New Service</fullName>
                <isActive>false</isActive>
                <label>Service Fulfillment - New Service</label>
            </value>
            <value>
                <fullName>Service Fulfillment - Service Change</fullName>
            </value>
            <value>
                <fullName>SSM Team</fullName>
            </value>
            <value>
                <fullName>Canada VRM Team</fullName>
            </value>
            <value>
                <fullName>Sales Broker Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>