force-app/main/default/objects/SBQQ__Quote__c/fields/Show_Flow_Path__c.field-meta.xml
<CustomField>
    <fullName>Show_Flow_Path__c</fullName>
    <description>Its a backend field to show quote_status_change_flow path.</description>
    <label>Show Flow Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>