force-app/main/default/objects/SBQQ__Quote__c/fields/Special_Handling__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By Pass STP</description>
    <label>Special Handling Needed</label>
    <type>Checkbox</type>
</CustomField>