force-app/main/default/objects/SBQQ__Quote__c/fields/Special_Handling_Reason__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling_Reason__c</fullName>
    <description>Reasons for Bypassing Straight Through Processing</description>
    <label>Special Handling Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery not needed/container on site</fullName>
            </value>
            <value>
                <fullName>Vendor costs attached</fullName>
            </value>
            <value>
                <fullName>Vendor preference</fullName>
            </value>
            <value>
                <fullName>Emergency vendor</fullName>
            </value>
            <value>
                <fullName>Client requires multiple quotes</fullName>
            </value>
            <value>
                <fullName>Client NTE values</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Back-dated service requested</fullName>
            </value>
            <value>
                <fullName>Automatically flagged by system</fullName>
            </value>
            <value>
                <fullName>Certificate of Destruction/Disposal or offsite address or special restrictions</fullName>
                <isActive>false</isActive>
                <label>Certificate of Destruction/Disposal or offsite address or special restrictions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>