force-app/main/default/objects/SBQQ__Quote__c/fields/Special_Handling_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling_Reason_Details__c</fullName>
    <description>Description text field if by pass reason is other. created for sdt-29084</description>
    <label>Special Handling Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>