force-app/main/default/objects/SBQQ__Quote__c/fields/STP_Success_Report__c.field-meta.xml
<CustomField>
    <fullName>STP_Success_Report__c</fullName>
    <description>Field to identify stp flow</description>
    <label>STP Success Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Full STP</fullName>
            </value>
            <value>
                <fullName>Partial STP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>