force-app/main/default/objects/SBQQ__Quote__c/fields/Troubleshoot_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Troubleshoot_Emergency__c</fullName>
    <formula>DateTimeValue(SBQQ__StartDate__c + (SBQQ__Account__r.tz__UTF_Offset__c /24)) -  (NOW() + SBQQ__Account__r.tz__UTF_Offset__c /24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Troubleshoot Emergency</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>