force-app/main/default/objects/SBQQ__Quote__c/fields/Vendor_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Commit_Date__c</fullName>
    <description>Field created based on 30514/30515</description>
    <label>Vendor Commit Date</label>
    <type>Date</type>
</CustomField>