force-app/main/default/objects/SBQQ__Quote__c/recordTypes/New_Service.recordType-meta.xml
<RecordType>
    <fullName>New_Service</fullName>
    <active>true</active>
    <description>This record type will use to main the different Quote type.</description>
    <label>New Service</label>
</RecordType>