force-app/main/default/objects/SBQQ__Quote__c/validationRules/Alternate_Description_NotRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>Alternate_Description_NotRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Alternate_Service_Provided__c  = False, NOT ISBLANK(Alternate_Description__c))</errorConditionFormula>
    <errorDisplayField>Alternate_Description__c</errorDisplayField>
    <errorMessage>Alternate Description is only applicable if Alternate Service Provided checkbox is checked.</errorMessage>
</ValidationRule>