force-app/main/default/objects/SBQQ__Quote__c/validationRules/Alternate_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Alternate_Description_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Alternate_Service_Provided__c  = True, ISBLANK(Alternate_Description__c))</errorConditionFormula>
    <errorDisplayField>Alternate_Description__c</errorDisplayField>
    <errorMessage>Alternate Description can not be blank</errorMessage>
</ValidationRule>