force-app/main/default/objects/SBQQ__Quote__c/validationRules/Primary_Contact_Change_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Contact_Change_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(SBQQ__PrimaryContact__c  &lt;&gt; PRIORVALUE(SBQQ__PrimaryContact__c),  TEXT(SBQQ__Status__c)  &lt;&gt; &apos;Draft&apos;)</errorConditionFormula>
    <errorMessage>Primary Contact can not be changed in this stage.</errorMessage>
</ValidationRule>