force-app/main/default/objects/SBQQ__Quote__c/validationRules/Quote_Status_Compliance_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Status_Compliance_Rule</fullName>
    <active>false</active>
    <description>To make sure end user should not skip the immediate next stage.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
ISCHANGED( SBQQ__Status__c ),
OR(AND(OR(
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Cost Configured&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Price Configured&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Approved&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Declined&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Product Configured&apos;)
),
ISPICKVAL(SBQQ__Status__c, &apos;Draft&apos;)),

AND(OR(
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Cost Configured&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Price Configured&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Approved&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Declined&apos;)
),
ISPICKVAL(SBQQ__Status__c, &apos;Product Configured&apos;)),

AND(OR(
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Draft&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Price Configured&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Approved&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Declined&apos;)
),
ISPICKVAL(SBQQ__Status__c, &apos;Cost Configured&apos;)),

AND(OR(
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Draft&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Approved&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Declined&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Product Configured&apos;)
),
ISPICKVAL(SBQQ__Status__c, &apos;Price Configured&apos;)),

AND(OR(
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Cost Configured&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Draft&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Declined&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Product Configured&apos;)
),
ISPICKVAL(SBQQ__Status__c, &apos;Approved&apos;)),

AND(OR(
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Cost Configured&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Draft&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Approved&apos;),
ISPICKVAL( PRIORVALUE(SBQQ__Status__c), &apos;Product Configured&apos;)
),
ISPICKVAL(SBQQ__Status__c, &apos;Declined&apos;)))
)</errorConditionFormula>
    <errorMessage>The immediate next stage can&apos;t be skipped.</errorMessage>
</ValidationRule>