force-app/main/default/objects/SBQQ__Quote__c/validationRules/QuoteOnly_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>QuoteOnly_Validation</fullName>
    <active>false</active>
    <description>Status not valid for Quote with Quote Only true.</description>
    <errorConditionFormula>AND(Quote_Only__c,  
OR(ISPICKVAL(SBQQ__Status__c,&apos;Price Configured&apos;), 
ISPICKVAL(SBQQ__Status__c,&apos;Declined&apos;),ISPICKVAL(SBQQ__Status__c,&apos;Approved&apos;)))</errorConditionFormula>
    <errorMessage>Status not valid for Quote with Quote Only true.</errorMessage>
</ValidationRule>