force-app/main/default/objects/SBQQ__Quote__c/validationRules/Status_Change_To_Cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Change_To_Cancellation</fullName>
    <active>true</active>
    <description>Validation added for story SDT-23803 - This will block user from cancelling quote from Chevron (Path) by clicking mark status as complete.</description>
    <errorConditionFormula>AND( ISBLANK( Cancellation_Reason__c ) , ISPICKVAL( SBQQ__Status__c , &apos;Cancelled&apos;) )</errorConditionFormula>
    <errorMessage>Please use the Cancel Quote button to cancel the quote.</errorMessage>
</ValidationRule>