force-app/main/default/objects/SBQQ__Quote__c/validationRules/Validate_AccountAndProjectCode.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_AccountAndProjectCode</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($User.Bypass_Validation__c),
NOT(ISBLANK(Project__c)),
NOT(ISBLANK(Project__r.Client_Account__c)),
SBQQ__Account__r.ParentId &lt;&gt; Project__r.Client_Account__c
)</errorConditionFormula>
    <errorMessage>Client Account on Quote and Project should be the same.</errorMessage>
</ValidationRule>