force-app/main/default/objects/SBQQ__Quote__c/listViews/Approved_Quotes.listView-meta.xml
<ListView>
    <fullName>Approved_Quotes</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Next_Action_Due_Date__c</columns>
    <columns>Last_Action_Performed__c</columns>
    <columns>Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Quotes</label>
</ListView>