force-app/main/default/objects/SBQQ__Quote__c/listViews/Canada_VRM_Team_quotes.listView-meta.xml
<ListView>
    <fullName>Canada_VRM_Team_quotes</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__StartDate__c</columns>
    <columns>Priority__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Action_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Canada VRM Team</value>
    </filters>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>equals</operation>
        <value>Draft,Product Configured,Procure Service,Cost Configured,Price Configured,Submit for approval</value>
    </filters>
    <filters>
        <field>Acorn_Integration_Status__c</field>
        <operation>notEqual</operation>
        <value>Success</value>
    </filters>
    <label>Canada VRM Team quotes</label>
</ListView>