force-app/main/default/objects/SBQQ__Quote__c/listViews/Configure_Price_Quotes.listView-meta.xml
<ListView>
    <fullName>Configure_Price_Quotes</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Next_Action_Due_Date__c</columns>
    <columns>Last_Action_Performed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>equals</operation>
        <value>Cost Configured</value>
    </filters>
    <label>Configure Price Quotes</label>
</ListView>