force-app/main/default/objects/SBQQ__Quote__c/listViews/Customer_Services_Team_Quotes.listView-meta.xml
<ListView>
    <fullName>Customer_Services_Team_Quotes</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Next_Action_Due_Date__c</columns>
    <columns>Last_Action_Performed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Customer Service Team</value>
    </filters>
    <label>Customer Service Team Quotes</label>
</ListView>