force-app/main/default/objects/SBQQ__Quote__c/listViews/My_Client_Quotes.listView-meta.xml
<ListView>
    <fullName>My_Client_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__StartDate__c</columns>
    <columns>Priority__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Action_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Team_Access__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Client Quotes</label>
</ListView>