force-app/main/default/objects/SBQQ__Quote__c/listViews/My_Last_Touched_Quotes.listView-meta.xml
<ListView>
    <fullName>My_Last_Touched_Quotes</fullName>
    <booleanFilter>1 AND 2 AND (3 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__StartDate__c</columns>
    <columns>Priority__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Action_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Modified_by_Me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>notEqual</operation>
        <value>Declined,Cancelled</value>
    </filters>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Acorn_Integration_Status__c</field>
        <operation>notEqual</operation>
        <value>Success</value>
    </filters>
    <label>My Last Touched Quotes</label>
</ListView>