force-app/main/default/objects/SBQQ__Quote__c/listViews/Procure_Services_Quotes.listView-meta.xml
<ListView>
    <fullName>Procure_Services_Quotes</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Next_Action_Due_Date__c</columns>
    <columns>Last_Action_Performed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>equals</operation>
        <value>Product Configured</value>
    </filters>
    <label>Procure Services Quotes</label>
</ListView>