force-app/main/default/objects/SBQQ__Quote__c/listViews/PS_team_users_Quotes.listView-meta.xml
<ListView>
    <fullName>PS_team_users_Quotes</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND (4 AND 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__StartDate__c</columns>
    <columns>Priority__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Action_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Project Services Team</value>
    </filters>
    <filters>
        <field>Assigned_To_Role__c</field>
        <operation>contains</operation>
        <value>Project Service</value>
    </filters>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>notEqual</operation>
        <value>Declined,Cancelled</value>
    </filters>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Acorn_Integration_Status__c</field>
        <operation>notEqual</operation>
        <value>Success</value>
    </filters>
    <label>PS Quotes</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Project_Services_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>