force-app/main/default/objects/SBQQ__Quote__c/listViews/Quotes_Pending_For_Information.listView-meta.xml
<ListView>
    <fullName>Quotes_Pending_For_Information</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Next_Action_Due_Date__c</columns>
    <columns>Last_Action_Performed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action_Type__c</field>
        <operation>equals</operation>
        <value>Pending Information</value>
    </filters>
    <label>Quotes Pending For Information</label>
</ListView>